slave03/server.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mlkyoto3
  labels:
    app: mlkyoto3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlkyoto3
  template:
    metadata:
      labels:
        app: mlkyoto3
    spec:
      containers:
      - name: mlkyoto3
        image: tejaschumbalkar/running_code
        ports:
        - containerPort: 7000
          protocol: TCP
      nodeSelector:
        slave: "slave03"
