slave03/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mlkyoto3
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /slave03
        backend:
          serviceName: mlkyoto3
          servicePort: 5000
